--- a/amazon.html
+++ b/amazon.html
@@ -21,7 +21,7 @@
   <body>
     <div class="amazon-header">
       <div class="amazon-header-left-section">
-        <a href="index.html" class="header-link">
+        <a href="amazon.html" class="header-link">
           <img class="amazon-logo"
             src="images/amazon-logo-white.png">
           <img class="amazon-mobile-logo"
@@ -50,10 +50,12 @@
         </a>
       </div>
     </div>
-    
+
     <div class="main">
-      <div class="products-grid" id="products-grid"></div>
+      <div class="products-grid js-products-grid">
+      </div>
     </div>
-    <script type="module" src="amazon.js"></script>
+
+    <script type="module" src="scripts/amazon.js"></script>
   </body>
 </html>
